--- a/frog-labeler/package.json
+++ b/frog-labeler/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.1",
+    "colormap": "^2.3.2",
+    "fluent-ffmpeg": "^2.1.3",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
