--- a/frog-labeler/package.json
+++ b/frog-labeler/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "6.16.1",
     "colormap": "^2.3.2",
     "fluent-ffmpeg": "^2.1.3",
     "next": "15.5.3",
@@ -30,7 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "prisma": "^6.16.1",
+    "prisma": "6.16.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
